--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port = 8080
 
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 spring.freemarker.cache=false
 
 management.endpoints.web.base-path=/manage
