--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port = 8080
 
-spring.h2.console.enabled=false
 spring.freemarker.cache=false
 
 management.endpoints.web.base-path=/manage
@@ -12,3 +11,5 @@ spring.application.name=pet-clinic
 
 # i18n
 spring.messages.basename=messages/messages
+
+spring.profiles.active=jpa
