owner - domain and controller tests

--- a/build.gradle
+++ b/build.gradle
@@ -50,13 +50,17 @@ subprojects {
         testImplementation("org.junit.jupiter:junit-jupiter-api:5.3.1")
         testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.3.1")
         testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.3.1")
+        testCompile("org.junit.vintage:junit-platform-engine:5.3.1")
         testCompile("org.junit.platform:junit-platform-runner:1.2.0")
+        testCompile("org.mockito:mockito-junit-jupiter:2.17.1")
 
         // Dependency setup for integration tests
         integrationTestImplementation("org.junit.jupiter:junit-jupiter-api:5.3.1")
         integrationTestRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.3.1")
         integrationTestRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.3.1")
+        integrationTestCompile("org.junit.vintage:junit-platform-engine:5.3.1")
         integrationTestCompile("org.junit.platform:junit-platform-runner:1.2.0")
+        integrationTestCompile("org.mockito:mockito-junit-jupiter:2.17.1")
 
         // tools
         runtime('org.springframework.boot:spring-boot-devtools')
