handle notfound, numberformat exceptions

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.application.name=pet-clinic
 spring.messages.basename=messages/messages
 
 spring.profiles.active=jpa
+
+# error
+server.error.include-stacktrace=always
