--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.5.RELEASE'
+        springBootVersion = '2.1.1.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -11,11 +11,17 @@ buildscript {
 }
 
 ext {
-    springVersion = "5.1.1.RELEASE"
-    springBootAdminVersion = '2.0.3'
-    junitJupiterVersion  = '5.3.1'
-    junitPlatformVersion = '1.3.1'
+    springVersion = "5.1.3.RELEASE"
+    springBootAdminVersion = '2.1.1'
+    junitJupiterVersion  = '5.3.2'
+    junitPlatformVersion = '1.3.2'
+    lombokVersion = '1.18.2'
 }
+
+apply plugin : 'java'
+apply plugin : 'application'
+
+mainClassName = 'com.example.demo.WebMainApplication'
 
 subprojects {
     apply plugin: 'java'
@@ -26,8 +32,8 @@ subprojects {
 
     group = 'com.example.demo'
     version = '0.0.1'
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = 11
+    targetCompatibility = 11
 
     configurations {
         integrationTestImplementation.extendsFrom implementation
@@ -69,7 +75,12 @@ subprojects {
 
         // tools
         runtime("org.springframework.boot:spring-boot-devtools")
-        compileOnly("org.projectlombok:lombok:1.18.2")
+
+        // Lombok
+        compileOnly "org.projectlombok:lombok:${lombokVersion}"
+        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
+        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     }
 
     dependencyManagement {
