--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ apply plugin : 'application'
 
 mainClassName = 'com.example.demo.WebMainApplication'
 
-subprojects {
+allprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
     apply plugin: 'eclipse'
@@ -34,6 +34,14 @@ subprojects {
     version = '0.0.1'
     sourceCompatibility = 11
     targetCompatibility = 11
+
+    bootJar {
+        enabled = false
+    }
+
+    jar {
+        enabled = true
+    }
 
     configurations {
         integrationTestImplementation.extendsFrom implementation
