--- a/pet-clinic-data/build.gradle
+++ b/pet-clinic-data/build.gradle
@@ -1,51 +1,39 @@
 buildscript {
-    ext {
-        springBootVersion = '2.1.1.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
+    repositories { mavenCentral() }
+}
+
+plugins {
+    id 'io.spring.dependency-management' version '1.0.5.RELEASE'
 }
 
 ext {
     springVersion = "5.1.3.RELEASE"
+    springBootVersion = '2.1.1.RELEASE'
     springBootAdminVersion = '2.1.1'
-    junitJupiterVersion  = '5.3.2'
+    junitJupiterVersion = '5.3.2'
     junitPlatformVersion = '1.3.2'
     lombokVersion = '1.18.2'
 }
 
 apply plugin: 'java'
-apply plugin : 'application'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
-mainClassName = 'com.example.demo.AdminApplication'
+jar {
+    baseName = 'pet-clinic-data'
+    version = '0.0.1-SNAPSHOT'
+}
 
 group = 'com.example.demo'
 version = '0.0.1'
 sourceCompatibility = 11
 targetCompatibility = 11
 
-configurations {
-    integrationTestImplementation.extendsFrom implementation
-    integrationTestRuntimeOnly.extendsFrom runtimeOnly
-}
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    // admin
-    implementation("de.codecentric:spring-boot-admin-starter-client:${springBootAdminVersion}")
-    implementation("de.codecentric:spring-boot-admin-starter-server:${springBootAdminVersion}")
-
     // web
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -78,6 +66,12 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.boot:spring-boot-dependencies:$springBootVersion"
+    }
 }
 
 test {
